--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="images/about-img1.jpg" alt="" />
+              <img src="images/about.jpg" alt="" />
             </div>
             <div class="img-box b2">
-              <img src="images/about-img2.jpg" alt="" />
+              <img src="images/about2.jpeg" alt="" />
             </div>
           </div>
 
