--- a/service.html
+++ b/service.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>Lekha Ayurveda</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -396,7 +396,7 @@
             </div>      
             <div class="col-md-4 d-flex justify-content-center align-items-center">
               <div class="fruit_img-box d-flex justify-content-center align-items-center">
-                <img src="img/Geriatric rehabilitatin.jpeg" alt="" class="img-service"  />
+                <img src="img/Geriatric rehabilitatin.jpg"  alt="" class="img-service"  />
               </div>
             </div>
           </div>
@@ -418,7 +418,7 @@
             </div>      
             <div class="col-md-4 d-flex justify-content-center align-items-center">
               <div class="fruit_img-box d-flex justify-content-center align-items-center">
-                <img src="img/foot.jpeg" alt="" class="img-service"  />
+                <img src="img/foot.jpg" alt="" class="img-service"  />
               </div>
             </div>
           </div>
@@ -643,7 +643,9 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a href="https://wa.link/45c2ie" class="whatsapp-float" target="_blank">
+        <img style="height: 50px; width: 50px;" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo">
+    </a>
 
 
     <!-- JavaScript Libraries -->
