--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/Panchakarma.jpg" alt="">
+                <img class="img-fluid" src="img/Panchakarma-home.jpg.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Panchakarma therapy
                     </h4>
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/postnatalcare.webp" alt="">
+                <img class="img-fluid" src="img/postnatalcare-home.webp.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Postnatal care
                     </h4>
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/weightloss.jpg" alt="">
+                <img class="img-fluid" src="img/weightloss-home.jpg.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Weight loss program</h4>
                     <p class="text-white px-3 mb-3"></p>
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/skin and hair.jpg" alt="">
+                <img class="img-fluid" src="img/skin and hair-home.jpg.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ayurvedic skin and hair care program </h4>
                     <p class="text-white px-3 mb-3"></p>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/ortho.jpg" alt="">
+                <img class="img-fluid" src="img/ortho-home.jpg.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Orthopaedic management</h4>
                     <p class="text-white px-3 mb-3"></p>
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/foot.jpeg" alt="">
+                <img class="img-fluid" src="img/foot-home.jpg.png" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Foot therapy
                     </h4>
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/Yoga.avif" alt="">
+                <img class="img-fluid" src="img/yoga.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Yoga
                     </h4>
