--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                            
                             <h3 class="display-3 text-capitalize text-white mb-3">Welcome to lekha Ayurveda</h3>
                             <p class="mx-md-5 px-5">Welcome to lekha Ayurveda where ancient Ayurvedic wisdom meets contemporary wellness solutions. Our website is your gateway to holistic healing and personalized care, tailored to harmonize your mind, body, and spirit . Explore our range of Ayurvedic therapies, consultations, and wellness programs designed to support your journey towards optimal health.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="service.html">Treatments</a>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                            
                             <h3 class="display-3 text-capitalize text-white mb-3">Welcome to lekha Ayurveda</h3>
                             <p class="mx-md-5 px-5">Welcome to lekha Ayurveda where ancient Ayurvedic wisdom meets contemporary wellness solutions. Our website is your gateway to holistic healing and personalized care, tailored to harmonize your mind, body, and spirit . Explore our range of Ayurvedic therapies, consultations, and wellness programs designed to support your journey towards optimal health.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="about.html">About us</a>
                         </div>
                     </div>
                 </div>
