--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="col-sm-6 control-group">
-                                    <input type="email" class="form-control border-0 p-4" id="email" placeholder="Your Email"
-                                        required="required" data-validation-required-message="Please enter your email" />
+                                    <input type="tel" class="form-control border-0 p-4" id="phone" placeholder="Your Phone Number"
+                                        required="required" data-validation-required-message="Please enter your phone number" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
