--- a/contact.html
+++ b/contact.html
@@ -136,12 +136,11 @@
                             </div>
                             <div class="control-group">
                                 <textarea class="form-control border-0 py-3 px-4" name="Message" rows="3" id="message" placeholder="Message"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
+                                    required="required" data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
-                                <button class="btn btn-primary py-3 px-4"type="submit" value="Submit" id="submit">Send Message</button>
+                                <button class="btn btn-primary py-3 px-4" type="submit" value="Submit" id="submit" disabled>Send Message</button>
                             </div>
                         </form>
                     </div>
